[package]
name = "ruvnc-viewer"
version = "0.2.0-rc1"
edition = "2021"
description = "RuVNC Viewer - modern Rust/egui VNC viewer built on the TigerVNC protocol engine"
license = "GPL-2.0-or-later"
build = "build.rs"
publish = false

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
cxx = "1"
mio = { version = "1", features = ["os-poll", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
wgpu = "24"
raw-window-handle = "0.6"
softbuffer = "0.4"
tiny-skia = "0.11"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
fluent-bundle = "0.16"
unic-langid = "0.9"
intl-memoizer = "0.5"
sys-locale = "0.3"

[target.'cfg(target_os = "linux")'.dependencies.eframe]
version = "0.31"
features = ["x11", "wayland"]

[build-dependencies]
cc = "1"
cxx-build = "1"
pkg-config = "0.3"
glob = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
