[package]
name = "tigervnc-plus"
version = "1.0.0"
edition = "2021"
description = "TigerVNC Plus - modern Rust UI over the TigerVNC C++ protocol engine"
license = "GPL-2.0-or-later"
build = "build.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "x11",
] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3"
cxx = "1"
mio = { version = "1", features = ["os-poll", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
log = "0.4"
env_logger = "0.11"
wgpu = "24"
raw-window-handle = "0.6"
softbuffer = "0.4"
tiny-skia = "0.11"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }

[build-dependencies]
cc = "1"
cxx-build = "1"
pkg-config = "0.3"
glob = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
